--- a/pages/login.html
+++ b/pages/login.html
@@ -4,9 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../src/css/imports.css">
+    <link rel="stylesheet" href="../src/css/login.css">
     <title>Login</title>
 </head>
 <body>
-    
+    <main class="container">
+        <section class="container-login">
+            <section class="container-login-quadro">
+                <div class="texto-saudacao">
+                    <h1>Olá,</h1>
+                    <h3>Para continuar navegando de forma<br> segura, efetue o login na rede.</h3>
+                </div>
+                <section class="login-acesso">
+                    <p>Login</p>
+                    <div class="acesso-credencias">
+                        <div class="credencias-bg usuario-bg">
+                            <input class="acesso-usuario" type="text" placeholder="Usuário"></div>
+                        <div class="credencias-bg senha-bg">
+                            <input class="acesso-senha" type="text" placeholder="Senha"></div>
+                    </div>
+                </section>
+                <div class="login-acesso-negado">
+                    <p class="acesso-negado">Ops, usuário ou senha inválidos.<br> Tente novamente!</p>
+                </div>
+                <button type="button" class="login-botao">Continuar</button>
+            </section>
+        </section>
+        <section class="container-bgLogo"></section>
+    </main>
 </body>
 </html>
