--- a/pages/home.html
+++ b/pages/home.html
@@ -11,6 +11,21 @@
     <header>    
     </header>
     <main class="container-main">
+        <div class="modal-container">
+            <div class="modal">
+            <h2>Aviso!</h2>
+            <hr />
+            <span>
+                O contador chegou a zero! Deseja permanecer nesta página?<br>
+                Caso queria, clique em permanecer e o contador será reiniciado! 
+            </span>
+            <hr />
+            <div class="btns">
+                <button class="btn1" onclick="carregaPagina()">Permanecer</button>
+                <button class="btn2" onclick="logout()">Logout</button>
+            </div>
+            </div>
+        </div>
     </main>
     <footer>
         <section class="footer-aviso">
