--- a/pages/home.html
+++ b/pages/home.html
@@ -8,7 +8,17 @@
     <title>Home</title>
 </head>
 <body>
-    <header>    
+    <header class="container-cabecalho">
+        <section class="cabecalho-local-tempo">
+            <h1 class="local">Fortaleza-ce</h1>
+            <h1 class="temperatura">30°</h1>
+            <p class="clima">Clima</p>
+        </section> 
+        <section class="cabecalho-data-hora">
+            <h1 id="hora-cabecalho"></h1>
+            <h1 id="data-cabecalho"></h1>
+            <h1 id="dia-cabecalho"></h1>
+        </section>  
     </header>
     <main class="container-main">
         <div class="modal-container">
