--- a/pages/home.html
+++ b/pages/home.html
@@ -9,16 +9,23 @@
 </head>
 <body>
     <header class="container-cabecalho">
-        <section class="cabecalho-local-tempo">
-            <h1 class="local">Fortaleza-ce</h1>
-            <h1 class="temperatura">30°</h1>
-            <p class="clima">Clima</p>
-        </section> 
+        <section class="cabecalho-logo">
+            <img src="../src/img/LogoCompasso 1.png" alt="logotipo Uol">
+        </section>
         <section class="cabecalho-data-hora">
-            <h1 id="hora-cabecalho"></h1>
-            <h1 id="data-cabecalho"></h1>
-            <h1 id="dia-cabecalho"></h1>
+            <p id="hora-cabecalho"></p>
+            <div class="dia-data">
+                <p id="dia-cabecalho"></p>
+                <p id="data-cabecalho"></p>
+            </div>
         </section>  
+        <section class="cabecalho-local-tempo">
+            <p class="local">Fortaleza-ce</p>
+            <div class="clima-tempo">
+                <p class="clima">Clima</p>
+                <p class="temperatura">30°</p>
+            </div>
+        </section> 
     </header>
     <main class="container-main">
         <div class="modal-container">
