home css completa

--- a/pages/home.html
+++ b/pages/home.html
@@ -43,6 +43,17 @@
             </div>
             </div>
         </div>
+        <section class="container-main-txt">
+            <h4 class="main-txt-en main-txt-en-h4">Our mission is</h4>
+            <p class="main-txt-pt">Nossa missão é</p>
+            <h3 class="main-txt-en main-txt-en-h3">to transform the world</h3>
+            <p class="main-txt-pt">transformar o mundo</p>
+            <h2 class="main-txt-en main-txt-en-h2">building digital experiences</h2>
+            <p class="main-txt-pt">construindo experiências digitais</p>
+            <h1 class="main-txt-en main-txt-en-h1">that enable our client’s growth</h1>
+            <p class="main-txt-pt">que permitam o crescimento dos nossos clientes</p>
+        </section>
+
     </main>
     <footer>
         <section class="footer-aviso">
@@ -64,5 +75,6 @@
         </section>
     </footer>
     <script src="../src/js/home.js"></script>
+    <script src="../src/js/hgapi.js"></script>
 </body>
 </html>
